--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "prom-client": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
