--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "/postgres-data"
   ],
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "@isaacs/express-prometheus-middleware": "^1.2.1",
     "@prisma/client": "^4.12.0",
     "@remix-run/css-bundle": "^1.16.0",
@@ -39,6 +40,7 @@
     "@remix-run/react": "^1.16.0",
     "@remix-run/server-runtime": "^1.16.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.36.4",
     "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
@@ -47,6 +49,7 @@
     "prom-client": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-feather": "^2.0.10",
     "tiny-invariant": "^1.3.1"
   },
