--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "clone-twiiter"
+app = "clone-twitter-2078"
 primary_region = "mia"
 
 [http_service]
